[package]
name = "filter-measurements"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filters"
path = "benches/filters.rs"
harness = false

[profile.bench]
lto = "thin"
